--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@ body
   margin-bottom:55px;
   margin-top: 55px;
   box-sizing: border-box;
-  background-color: #E5E7EB;
+  background-color: #1F2937;
+  color:darkgray;
 }
 
 
@@ -20,7 +21,7 @@ body
   justify-content: space-between;
   position:fixed;
   top:0;
-  background-color: white;
+  background-color: #111827;
   height:55px;
   width:100%;
   box-sizing: border-box;
@@ -38,16 +39,25 @@ body
 {
   display: flex;
   align-items: center;
-  width:50%;
-  border:1px solid black;
+  width:40%;
+
   padding:.2rem;
   color:grey;
 }
 .header__input>input{
   flex:1;
-  border:none
+  padding:.5rem;
+  background-color: transparent;
+  color:darkgray;
+  border:none;
+  font-size: 1.2rem;
+  outline: none;
 }
+.header__input>input:focus
+{
+  border-bottom: 1px solid darkgray ;
 
+}
 .bottom-bar
 {
   display:flex;
@@ -59,9 +69,9 @@ body
   width: 100%;
   box-sizing: border-box;
   height:55px;
-  background-color: black;
+  background-color:#111827; ;
   color:darkgray;
-  border-top:.2px solid lightgray;
+  border-top:.2px solid black;;
   z-index: 100;
 }
 
@@ -178,7 +188,7 @@ body
   padding:1rem;
   margin: 0 auto;
   margin-bottom: 4rem;
-  box-shadow: 4px 4px 5px 2px lightgray;
+  box-shadow: 4px 4px 5px 2px #374151;
   
   
 
@@ -193,11 +203,15 @@ body
 
 }
 .topics__topic button{
- background-color: red;
+ background-color: #4B5563;
  width:7rem;
- padding:.4rem;
+ padding:.5rem 0 ;
  border-radius: 5px;
  border:none;
+ font-weight: 600;
+ color:darkgrey;
+ cursor: pointer;
+ font-size: .8rem;
  margin-left:1rem;;
  
 }
@@ -209,6 +223,7 @@ body
   align-items: center;
   padding:.5rem 0;
   background-color: black;
+  flex: 1;
  
 }
 
@@ -226,6 +241,7 @@ body
 .icons
 {
   display: flex;
+ 
 
 }
 .icon
@@ -234,7 +250,11 @@ body
 
 
 }
-
+.videoHeading
+{
+  padding:1rem 1.5rem;
+  font-size: 1.5rem;
+}
 
 .playlist
 {
